--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -1,8 +1,8 @@
 <style>
 	.btn-get-code {
-		margin: 3px auto;
+		margin: 4px auto;
     	display: block;
-		width: 150px;
+		width: 164px;
 		text-align: left!important;
 	}
 	#touchpoint_hub_table tr.jsgrid-header-row, #data_observers_table tr.jsgrid-header-row {
@@ -31,6 +31,9 @@
 	
 	#data_observers_table tr td:last-child button.dropdown-toggle {
 		font-size: 1.1em;
+	}
+	#cx_qrImgSrc {
+		max-height: 268px;
 	}
 </style>
 
@@ -303,29 +306,31 @@ LeoObserver.addTrackingAllButtons = function(){
 	                <select id="feedbackTemplateSelector" data-placeholder="Choose a template name" class="select" >
 	                  <!-- feedbackTemplateSelector -->  
 	                </select>
+	                <div class="checkbox">
+					  	<label><input type="checkbox" id="leo_survey_in_shared_devices" > 
+					  		Collect feedback data in shared devices, automatically create new profile when submit feedback form</label>
+					</div>
 	            </div>
 				
 				<!--  Tab Navigation Items -->
 				<ul class="nav nav-tabs" data-tab-content="cx_code_tabs" > 
-		       		<li class="active" id="tab_panel_cx_qr_code">
-		       			<a href="javascript:" data-target-tab="panel_cx_qr_code"  > <i class="fa fa-qrcode" aria-hidden="true"></i> QR Code </a>
+					<li class="active" id="tab_panel_cx_web_form">
+		       			<a href="javascript:" data-target-tab="panel_cx_web_form"  > <i class="fa fa-link" aria-hidden="true"></i> Web Form </a>
 		       		</li>
-		       		<li id="tab_panel_cx_web_form"  >
-		        		<a href="javascript:refreshCodeMirrorEditor()" data-target-tab="panel_cx_web_form" > <i class="fa fa-code" aria-hidden="true"></i> JavaScript Code </a>
+		       		<li id="tab_panel_cx_js_code"  >
+		        		<a href="javascript:refreshCodeMirrorEditor()" data-target-tab="panel_cx_js_code" > <i class="fa fa-code" aria-hidden="true"></i> JavaScript Code </a>
+		       		</li>
+		       		<li id="tab_panel_cx_qr_code">
+		       			<a href="javascript:" data-target-tab="panel_cx_qr_code"  > <i class="fa fa-qrcode" aria-hidden="true"></i> QR Code </a>
 		       		</li>
 				</ul>
 
-				<div class="tab-content" id="cx_code_tabs" style="min-height: 380px;" >
-					
+				<div class="tab-content" id="cx_code_tabs" style="min-height: 382px;" >
+				
 					<!-- tab 1  -->
-					<div class="tab-pane active" id="panel_cx_qr_code" >
-				        <div class="table-responsive">
-				            <div class="text-center" >
-						   	 <a target="_blank" href="#" id="cx_qrHrefUrl"> <img src="" alt="CX QR Code Image" id="cx_qrImgSrc" > </a>
-						   	</div>
-						   	<label class="control-label">QR Code Image URL </label>
-						   	<input type="text" class="form-control" readonly value="" id="cx_qrCodeImageURL" >
-						   	<label class="control-label"> CX Survey/Rating Form URL </label>
+					<div class="tab-pane active" id="panel_cx_web_form" >
+				        <div class="table-responsive" style="height: 292px;">
+				        	<label class="control-label"> Web Form URL </label>
 						   	<input type="text" class="form-control" readonly value="" id="cx_qrFormURL" >
 				        </div>
 				        <hr>
@@ -335,7 +340,7 @@ LeoObserver.addTrackingAllButtons = function(){
 					</div>
 					
 					<!-- tab 2  -->
-					<div class="tab-pane" id="panel_cx_web_form"  >
+					<div class="tab-pane" id="panel_cx_js_code"  >
 						
 				    	<div id="feedback_form_code_holder" class="col-sm-12" >
 								<textarea class="code" >
@@ -397,8 +402,22 @@ LeoObserver.addTrackingAllButtons = function(){
 				    		<button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> Close</button>
 				    	</div>
 					</div>
+					
+					<!-- tab 3  -->
+					<div class="tab-pane" id="panel_cx_qr_code" >
+				        <div class="table-responsive">
+				            <div class="text-center" >
+						   	 	<a target="_blank" href="#" id="cx_qrHrefUrl"> <img src="" alt="CX QR Code Image" id="cx_qrImgSrc" > </a>
+						   	</div>
+						   	<label class="control-label">QR Code Image URL </label>
+						   	<input type="text" class="form-control" readonly value="" id="cx_qrCodeImageURL" >
+				        </div>
+				        <hr>
+				  		<div class="text-right">
+				    		<button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> Close</button>
+				    	</div>
+					</div>
 				</div>	
-				
 				
 			</div>  
 			
@@ -492,7 +511,7 @@ setTimeout(function(){
 				<h4 class="modal-title text-center" > LEO API Information </h4>
 			</div>         
 			<div class="modal-body ">
-				<h4> <i class="fa fa-info-circle" aria-hidden="true"></i> API Token Information of <span id="leoCdpApiObserverName" class="highlight_text" ></span> </h4>
+				<h4> <i class="fa fa-info-circle" aria-hidden="true"></i> API Token Keys for <span id="leoCdpApiObserverName" class="highlight_text" ></span> </h4>
 				<p> In the HTTP Header, you must set the "tokenkey" for API Token Key and the "tokenvalue" for API Token Value</p>
 				<div class="form-group" >
 	                <label for="leoCdpApiTokenKey" class="highlight_text" > API Token Key ( tokenkey ) </label> 
