--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -1,4 +1,20 @@
+<!-- common CSS -->
 <style>
+	.has_contact { background-color: #FFF8DC!important; color: #3300ff!important; font-size:14px!important; font-weight: bold; }
+	.no_contact {color:#000!important;}
+	th.sorting, th.sorting_desc, th.sorting_asc { text-decoration: underline; }
+	div.profile_medium_score { color:#1A529E!important;font-size:14px!important; }
+	div.profile_high_score { color:#3300ff!important;font-size:16px!important; }
+	.text-center { text-align: center!important; }
+	div.datatable_row_checkbox {
+		font-size:1.3em!important; color:#3300ff!important; cursor: pointer; 
+		height: 25px!important; width:100%!important; border-radius: 12px;
+	}
+	div.datatable_row_checkbox:hover {
+		background-color: #FFF8DC!important;
+		color: #EC4B0A!important;
+		font-size:1.5em;
+	}
 	.item-headline-img {
 		vertical-align: middle;
 	    max-width: 96px;
