--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -272,7 +272,7 @@ LeoObserver.addTrackingAllButtons = function(){
 				<h5 id="landingPageName" > </h5>
 				<div>
 				   <div class="text-center" >
-				   	 <a target="_blank" href="#" id="qrHrefUrl"> <img src="" alt="QR Code Image" id="qrImgSrc" > </a>
+				   	 <a target="_blank" rel="noreferrer" href="#" id="qrHrefUrl"> <img src="" alt="QR Code Image" id="qrImgSrc" > </a>
 				   </div>
 				   <label class="control-label"> Smart Link URL </label>
 				   <input type="text" class="form-control" readonly value="" id="qrShortURL"> 
@@ -407,7 +407,7 @@ LeoObserver.addTrackingAllButtons = function(){
 					<div class="tab-pane" id="panel_cx_qr_code" >
 				        <div class="table-responsive">
 				            <div class="text-center" >
-						   	 	<a target="_blank" href="#" id="cx_qrHrefUrl"> <img src="" alt="CX QR Code Image" id="cx_qrImgSrc" > </a>
+						   	 	<a target="_blank" rel="noreferrer" href="#" id="cx_qrHrefUrl"> <img src="" alt="CX QR Code Image" id="cx_qrImgSrc" > </a>
 						   	</div>
 						   	<label class="control-label">QR Code Image URL </label>
 						   	<input type="text" class="form-control" readonly value="" id="cx_qrCodeImageURL" >
@@ -494,7 +494,7 @@ setTimeout(function(){
 				Redis Information: <b id="dataSourceConfigHostAndPort" > </b> <br>
 				Touchpoint Name: <b id="dataSourceConfigTouchpointName" > </b> <br>
 				<hr>
-				<a href="https://redis.io/topics/pubsub" target="_blank"> Document about Redis Pub/Sub </a>
+				<a href="https://redis.io/topics/pubsub" target="_blank" rel="noreferrer" > Document about Redis Pub/Sub </a>
 			</div>  
 			<div class="modal-footer">
 		        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> Close </button>
@@ -520,7 +520,9 @@ setTimeout(function(){
 				    <input type="text" class="form-control" readonly value="" id="leoCdpApiTokenValue" >
 	            </div>
 	            <hr>
-	            <h4> <i class="fa fa-info-circle" aria-hidden="true"></i> API Endpoints (<a href="https://github.com/USPA-Technology/leo-cdp-api-examples" target="_blank">Get example code here</a>) </h4>
+	            <h4> <i class="fa fa-info-circle" aria-hidden="true"></i> 
+	            	API Endpoints (<a href="https://github.com/USPA-Technology/leo-cdp-api-examples" target="_blank" rel="noreferrer">Get example code here</a>) 
+	            </h4>
 				<label class="highlight_text" > To create a new profile or update an existed profile, call this API with HTTP POST: </label> <br>
 				<input type="text" class="form-control" readonly value="" id="leoCdpGetProfileApiUrl" >
 				<label class="highlight_text"> To save a tracking event for a specific profile, call this API with HTTP POST: </label> <br>
