refactor system and add new features

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -549,7 +549,7 @@ setTimeout(function(){
 			</div>         
 			<div class="modal-body row">
 				<div class="row form-group">
-					<label  class="control-label col-md-3" for="connectorName" > Name </label>
+					<label  class="control-label col-md-3" for="dataServiceName" > Name </label>
 					<div class="col-md-9 float-left" >
 				    	<input type="text" id="newJourneyMapName"  placeholder="Enter Name" class="form-control" style="width: 98%" >
 				   	</div>
