--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -88,8 +88,8 @@
 <script id='engaged-touchpoint-tpl' type="text/html" >
  <li class="list-group-item view" id="tp_<%- id %>">
    <div class="row">
-	  <div class="col-md-2 text-center" style="margin-top: 15px;" > <%- eventCount %> events </div>
-      <div class="col-md-10">
+	  <div class="col-lg-2 text-center" style="margin-top: 5px;" > Total Event: <br> <span class="scoring_field"><%- eventCount %></span>  </div>
+      <div class="col-lg-10">
          <small class="text-muted pull-right"> Updated: <%- updatedAt %> </small>
          <h5 class="media-heading"> <a target="_blank" rel="noreferrer" href="<%- url %>" > <%- name %> </a> </h5>
          <div class="text-nowrap " >  
