fix bugs show custom event info

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -122,7 +122,7 @@
 			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Event Data:</b> <br> 
 			<ul>
 			<% _.forOwn(eventData, function(value, key) { %>
-				<li> <%- key %> : <%- value %> </li>
+				<li> <%- key %> : <%- decodeURIComponent(value) %> </li>
 			<% }) %>
 			<ul>
 			</span> 
@@ -159,7 +159,7 @@
 			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Event Data:</b> <br>
 			<ul>
 			<% _.forOwn(eventData, function(value, key) { %>
-				<li> <b> <%- key %> </b> : <mark> <%- value %> </mark>  </li>
+				<li> <b> <%- key %> </b> : <mark> <%- decodeURIComponent(value) %> </mark>  </li>
 			<% }) %>
 			<ul>
 			</span> 
@@ -200,7 +200,7 @@
 			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Event Data:</b> <br> 
 			<ul>
 			<% _.forOwn(eventData, function(value, key) { %>
-				<li> <b> <%- key %> </b> : <mark> <%- value %> </mark>  </li>
+				<li> <b> <%- key %> </b> : <mark> <%- decodeURIComponent(value) %> </mark>  </li>
 			<% }) %>
 			<ul>
 			</span> 
@@ -241,7 +241,7 @@
 			<span class="small" > <b><i class="fa fa-info-circle" aria-hidden="true"></i> Event Data:</b> <br> 
 			<ul>
 			<% _.forOwn(eventData, function(value, key) { %>
-				<li> <b> <%- key %> </b> : <mark> <%- value %> </mark>  </li>
+				<li> <b> <%- key %> </b> : <mark> <%- decodeURIComponent(value) %> </mark>  </li>
 			<% }) %>
 			<ul>
 			</span> 
