--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -511,7 +511,7 @@ setTimeout(function(){
 				<h4 class="modal-title text-center" > LEO API Information </h4>
 			</div>         
 			<div class="modal-body ">
-				<h4> <i class="fa fa-info-circle" aria-hidden="true"></i> API Token Keys for <span id="leoCdpApiObserverName" class="highlight_text" ></span> </h4>
+				<h4> <i class="fa fa-info-circle" aria-hidden="true"></i> API Tokens for <span id="leoCdpApiObserverName" class="highlight_text" ></span> </h4>
 				<p> In the HTTP Header, you must set the "tokenkey" for API Token Key and the "tokenvalue" for API Token Value</p>
 				<div class="form-group" >
 	                <label for="leoCdpApiTokenKey" class="highlight_text" > API Token Key ( tokenkey ) </label> 
@@ -531,8 +531,8 @@ setTimeout(function(){
 				<input type="text" class="form-control" readonly value="" id="leoCdpListEventsApiUrl" >
 			</div>  
 			<div class="modal-footer">
-				<button type="button" class="btn btn-do-now" onclick="resetAccessTokenForLeoObserverApi()" >
-					<i class="fa fa-check" aria-hidden="true"></i> Reset API Token Value </button>
+				<button type="button" class="btn btn-danger" onclick="resetAccessTokenForLeoObserverApi()" >
+					<i class="fa fa-refresh" aria-hidden="true"></i> Reset API Tokens </button>
 		        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> Close </button>
 		    </div>  
 		</div>
