improve UI  data journey map

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -20,7 +20,7 @@
 		color: #3300ff;
 	}
 	.tphub_text_label {
-		font-size:13.3px!important; stroke:#566573; font-weight:lighter; word-spacing: 1px;
+		font-size:12.6px!important; stroke:rgb(94, 92, 100); font-family: Arial, Helvetica, sans-serif;
 	}
 	#data_observers_table .dropdown-menu {
 		left: -35px!important;
@@ -28,7 +28,6 @@
 	#data_observers_table tr td:last-child {
 	  	height: 100px;
 	}
-	
 	#data_observers_table tr td:last-child button.dropdown-toggle {
 		font-size: 1.1em;
 	}
