improve UI UX of admin

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -556,10 +556,10 @@ setTimeout(function(){
 			</div>  
 			
 			<div class="modal-footer" >
-				<button type="button" class="btn btn-do-now" onclick="saveNewJourneyMap()">
-					<i class="fa fa-check" aria-hidden="true"></i> OK 
+		        <button type="button" class="btn" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> Close</button>
+		        <button type="button" class="btn btn-goto-router" onclick="saveNewJourneyMap()">
+					<i class="fa fa-check-square-o" aria-hidden="true"></i> OK 
 				</button>
-		        <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> Close</button>
 		    </div>  
 		</div>
 	</div>
