improve system, prepare white label version

--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-journey-flow.html
@@ -162,7 +162,7 @@ __eventTrackingFunctions__
 
 // (3) LEO OBSERVER is ready
 function leoObserverProxyReady(session) {
-   	// auto tracking when LEO CDP JS is ready
+   	// auto tracking when CDP JS is ready
    	__autoTrackingFunctions__ ;
    	
    	// set tracking LEO visitor ID into all a[href] nodes
