--- a/resources/app-templates/leocdp-admin/templates/tpl-leo-cdp-license.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-leo-cdp-license.html
@@ -1,4 +1,4 @@
-############################## METADATA for LEO CDP ##############################
+############################## METADATA for CDP ##############################
 
 ##### ##### ##### BUILD for RELEASE ##### ##### #####
 runtimeEnvironment=PRO
@@ -7,12 +7,11 @@ superAdminEmail={{superAdminEmail}}
 buildEdition={{buildEdition}}
 buildVersion={{buildVersion}}
 
-##### ##### ##### Default Leo CDP database for free and pro version ##### ##### #####
+##### ##### ##### Default CDP database for free and pro version ##### ##### #####
 mainDatabaseConfig=localCdpDbConfigs
 
 ##### ##### ##### Admin Dashboard ##### ##### #####
 adminLogoUrl={{adminLogoUrl}}
-adminPromoVisibility={{adminPromoVisibility}}
 httpAdminDomain={{httpAdminDomain}}
 
 ##### ##### ##### Data Hub for Data Observer ##### ##### ##### #####
@@ -27,11 +26,11 @@ httpStaticDomain={{httpStaticDomain}}
 ##### ##### ##### jupyter notebook to  ##### ##### #####
 httpJupyterNotebookDomain={{httpJupyterNotebookDomain}}
 
-##### ##### ##### LEO CDP License Metadata ##### ##### #####
+##### ##### ##### CDP License Metadata ##### ##### #####
 leoCdpLicenseKey={{leoCdpLicenseKey}}
 leoCdpLicenseQuota={{leoCdpLicenseQuota}}
 
-##### ##### ##### LEO CDP METADATA ##### ##### #####
+##### ##### ##### CDP METADATA ##### ##### #####
 # COMMERCE, FINANCE, MEDIA, SERVICE
 industryDataModels=COMMERCE,MEDIA,SERVICE
 productType=CDP
