--- a/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/templates/tpl-customer-profile-info.html
@@ -558,16 +558,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h3 class="modal-title"> <i class="fa fa-compress" aria-hidden="true"></i> Deduplicate Current Profile </h3>
+                <h3 class="modal-title"> <i class="fa fa-compress" aria-hidden="true"></i> De-duplicate Profiles </h3>
             </div>
 			<div class="modal-body">
                 <div class="alert alert-info">
-                    <h4> <i class="fa fa-question-circle-o" aria-hidden="true"></i>  Do you want to do data deduplication ? </h4>
+                    <h4> <i class="fa fa-question-circle-o" aria-hidden="true"></i>  Do you want to do data de-duplication ? </h4>
                 </div>
             </div>
             <div class="modal-footer">
-            	<button type="button" class="btn btn-primary" data-dismiss="modal"> <i class="fa fa-minus-circle" aria-hidden="true"></i> CANCEL </button>
-                <button type="button" class="btn btn-goto-router" onclick="deduplicateCurrentProfile()"> <i class="fa fa-check" aria-hidden="true"></i> OK </button>
+            	<button type="button" class="btn btn-primary" data-dismiss="modal"> <i class="fa fa-minus-circle" aria-hidden="true"></i> Cancal </button>
+                <button type="button" class="btn btn-success" onclick="deduplicateCurrentProfile()"> <i class="fa fa-check-circle" aria-hidden="true"></i> Do de-duplication </button>
             </div>
         </div>
 
